<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dheeraj.college.profile"
    android:background="#e0e0e0">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:indeterminate="true"
        android:visibility="invisible" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/registrationFormLayout"
        android:layout_marginTop="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:background="#64b5f6">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/imageUpload"
            android:layout_gravity="center"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="160dp"
            android:layout_height="135dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#f44336"
            android:src="@mipmap/ic_perm_identity_black_48dp"
            />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/enter_your_name"
            android:id="@+id/userName_editText"
            android:inputType="textPersonName"
            android:gravity="center"
            android:maxLines="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/age"
            android:id="@+id/age"
            android:inputType="number"
            android:maxLines="1"
            android:gravity="center"
            />

    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f44336"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/done"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#ffff" />

</RelativeLayout>

</android.support.constraint.ConstraintLayout>
